<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="htjc_app_name">活体检测</string>
    <string name="htjc_hello_world">Hello world!</string>
    <string name="htjc_app_name_overlight">人像活体检测</string>
    <string name="htjc_app_name_picquality">人像质量判断</string>
    <string name="htjc_str_main">活体检测</string>
    <string name="htjc_str_main_btn_quality_judge">质量判断</string>
    <string name="htjc_str_main_btn_start_check">开始检测</string>
    <string name="htjc_str_main_btn_setting">设        置</string>
    <string name="htjc_str_main_btn_tip">左看：头向左偏，朝着卡通图看\n右看：头向右偏，朝着卡通图看</string>
    
    <string name="htjc_str_live_txt_title">请将脸置于提示框内</string>
    
    
    <string name="htjc_str_exit">很抱歉,程序出现异常,即将退出！</string>
    
	
    <string name="htjc_attention_not_shake">眼睛请盯着绿色圆圈，不要晃手机和头</string>
    
    <string name="htjc_btn_inc">&#62;</string>
    <string name="htjc_btn_dec">&#60;</string>
    <string name="htjc_btn_return">返回</string>
    <string name="htjc_btn_resume">重新开始(10s)</string>
	<string name="htjc_friendly_tip_0">未采集到合格的人像,再试一次吧!</string>
	<string name="htjc_friendly_tip_1">恭喜您,检测成功!</string>
	<string name="htjc_friendly_tip_2">很遗憾,检测失败!</string>
	<string name="htjc_friendly_tip_3">操作时间过长!</string>
	<string name="htjc_look_at_me">看着我</string>
	<string name="htjc_pic_decting">数据处理中</string>
	<string name="htjc_no_face">没有检测到人脸</string>
	<string name="htjc_multi_face">检测到多个人脸</string>
	<string name="htjc_no_best_pic">未找到最佳采集照片</string>
	<string name="htjc_camera_not_start">请开启您的摄像头</string>
	<string name="htjc_no_SDCard">"未发现SD卡，请稍后重试或重新启动手机！"</string>
	<string name="htjc_no_facing_front_camera">抱歉打开前置摄像头失败，请稍后再试</string>
	<string name="htjc_no_pass_reason_no_face">没有检测到人脸</string>
	<string name="htjc_no_pass_reason_multi_face">屏幕中存在多张人脸</string>
	<string name="htjc_no_pass_reason_skew_face">请正面面对屏幕</string>
	<string name="htjc_no_pass_reason_too_bright">环境光线过亮</string>
	<string name="htjc_no_pass_reason_too_dark">环境光线过暗</string>
	<string name="htjc_no_pass_reason_too_far">请靠近摄像头</string>
	<string name="htjc_no_pass_reason_blur">图像过于模糊</string>
	<string name="htjc_no_pass_reason_yawangle">左右姿态角度过大</string>
	<string name="htjc_no_pass_reason_picangle">俯仰角度过大</string>
	<string name="htjc_no_pass_reason_mouthclosed">嘴巴张开过大</string>
	
	<string name="htjc_face_in_box">请将脸部置于提示框中</string>
	<string name="htjc_memory_not_enough">内存不足！</string>
	<string name="htjc_shake_head">请摇头</string>
	<string name="htjc_timerdialog_return">返      回</string>
	<string name="htjc_timerdialog_recheck">重新检测</string>
	<string name="htjc_str_look_left_right">请调整脸部位置，并按提示左看右看</string>
	 <string name="htjc_main_title">身份检测</string>
    <string name="htjc_main_remind1">不要阴影，不要逆光</string>
    <string name="htjc_main_remind2">摘掉眼镜，露出额头</string>
    
    <string name="htjc_guide_time_out">未检测到人脸</string>
    
    <string name="htjc_success_title">检测结果</string>
    <string name="htjc_success_result">检测成功</string>
    <string name="htjc_fail_title">检测结果</string>
    <string name="htjc_fail_result">检测失败</string>
    <string name="htjc_fail_reason">可能失败的原因：</string>
    
    <string name="htjc_fail_remind_default">检测未通过</string>
    <string name="htjc_fail_remind_noface">1.光线太明或太暗\n2.操作过程中有遮挡，未露出额头\n3.操作过程中幅度过大或非常规操作</string>
    <string name="htjc_fail_remind_moreface">屏幕中出现多张人脸</string>
    <string name="htjc_fail_remind_notlive">1.光线太明或太暗\n2.未将脸部置于屏幕正中间\n3.非常规操作</string>
    <string name="htjc_fail_remind_badmovementtype">操作过程中幅度过大或非常规操作</string>
    <string name="htjc_fail_camera_quanxian">你禁止了调用相机的权限</string>
    <string name="htjc_fail_remind_timeout">检测超时</string>
    <string name="htjc_fail_remind_pgp_fail">照片获取失败，请重新检测</string>
    <string name="htjc_fail_remind_3d">非常规操作（3d错误）</string>
    <string name="htjc_fail_remind_badcolor">非常规操作（肤色异常）</string>
    <string name="htjc_fail_remind_badcontinuity">非常规操作(连续性错误)</string>
    <string name="htjc_fail_remind_abnormality">非常规操作</string>
    
    <string name="htjc_guide_remind_dark">光线过暗,请打开灯光</string>
    <string name="htjc_guide_remind_bright">光线过亮,请避开逆光</string>
    
	
</resources>
