<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.livedetect.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/htjc_title_bg" >

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:visibility="gone"
            android:src="@drawable/htjc_title_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/htjc_main_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/htjc_main_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/rl_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
            android:background="@drawable/htjc_main_face_frame"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#000000"
                android:padding="1dp"
                   android:scaleType="centerCrop"
                android:src="@drawable/htjc_main_face" />

            <RelativeLayout
                android:id="@+id/rl_remind1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/iv_remind1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/htjc_main_sun" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_remind1"
                    android:text="@string/htjc_main_remind1"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_remind2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp" >

                <ImageView
                    android:id="@+id/iv_remind2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/htjc_main_glasses" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_remind2"
                    android:text="@string/htjc_main_remind2"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        
        
       
        
        
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
             >

            <ImageView
                android:id="@+id/iv_dcim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/htjc_main_dcim_selector"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_toRightOf="@id/iv_dcim"
                android:src="@drawable/htjc_main_start_selector" />
            <TextView 
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_below="@id/iv_start"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>